@@ -13,6 +13,7 @@ v1.2.3
 ! imdb_person::filmograf did not catch characters if they had no link. Due
   to changes on the IMDB sites, it in fact did no longer catch any character...
 ! imdb_person: born() and died() missed to return the year due to IMDB site changes
+! imdb::seasons() returned wrong season count, and imdb::episodes() got messed up on airing dates
 
 v1.2.2 (26.11.2009)
 -------------------
